--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
+
 default_language = "en"
 generate_feed = true
 
@@ -44,6 +45,9 @@ summary = "Il mio blog"
 
 [translations]
 summary = "My blog"
+
+[search]
+index_format = "elasticlunr_json"
 
 [extra]
 # Put all your custom variables here
